Fix unwanted horizontal scrolling

--- a/static/scss/_base.page.scss
+++ b/static/scss/_base.page.scss
@@ -2,15 +2,16 @@ html {
   height: 100%
 }
 
-body { 
+body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0;
+  overflow-x: hidden;
   padding-top: 4rem;
   @include breakpoint(small only) {
     padding-top: 3rem;
-  } 
+  }
 }
 
 main {
